Crash on unwrap with specific mesh #36435

Closed
opened 2013-08-10 19:42:17 +02:00 by Julian Herzog · 7 comments

%%%--- Short description of error ---
Unwrapping the attached mesh (Edit-Mode, u > unwrap) will consistently crash-close blender.

- Operating System, Graphics card ---

Windows 7 x64, Nvidia Quadro 1000M

- Blender version with error, and version that worked ---

2.68a, 2.68 r58750 both crash.
2.67a doesn't crash.%%%

%%%--- Short description of error --- Unwrapping the attached mesh (Edit-Mode, u > unwrap) will consistently crash-close blender. - Operating System, Graphics card --- Windows 7 x64, Nvidia Quadro 1000M - Blender version with error, and version that worked --- 2.68a, 2.68 r58750 both crash. 2.67a doesn't crash.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Confirmed. (Windows 7 x64) %%%

%%%Confirmed. (Windows 7 x64) %%%

%%%Looks like simple missing NULL check.
Attached a NULL check - assigning to Howard in case the issue is more involved.%%%

%%%Looks like simple missing NULL check. Attached a NULL check - assigning to Howard in case the issue is more involved.%%%

%%%Hi,
any update here? Thanks. %%%

%%%Hi, any update here? Thanks. %%%

%%%Hey Campbell, shouldn’t you just commit this fix for now? Better to have a fix that may not be optimal, than no fix at all, esp. when it is as simple as this one, imho… ;)%%%

%%%Hey Campbell, shouldn’t you just commit this fix for now? Better to have a fix that may not be optimal, than no fix at all, esp. when it is as simple as this one, imho… ;)%%%

%%%fixed r60483.%%%

%%%fixed r60483.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36435
No description provided.