fix [#36435] Crash on unwrap with specific mesh