source/blender/bmesh/tools/bmesh_bevel.c
@@ -1207,8 +1207,12 @@ static void bevel_build_rings(BMesh *bm, BevVert *bv)
 			f = boundvert_rep_face(v);
 			f2 = boundvert_rep_face(v->next);
 			if (!v->any_seam) {
-				for (ring = 1; ring < ns2; ring++)
-					bev_merge_uvs(bm, mesh_vert(vm, i, ring, ns2)->v);
+				for (ring = 1; ring < ns2; ring++) {
+					BMVert *v_uv = mesh_vert(vm, i, ring, ns2)->v;
+					if (v_uv) {
+						bev_merge_uvs(bm, v_uv);
+					}
+				}
 			}
 		} while ((v = v->next) != vm->boundstart);
 		if (!bv->any_seam)
